--- a/Desktop/react/bootstrap-split/bootsplit/src/App.css
+++ b/Desktop/react/bootstrap-split/bootsplit/src/App.css
@@ -2,24 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #09d3ac;
-}
+
 
 .leftside, .rightside {
 
@@ -35,7 +20,17 @@
 @media screen and (min-width:768px)
 {
 
-	.leftside, .rightside {
+	.leftside, .rightside{
+
+		height:100vh;
+	}
+
+
+}
+@media screen and (max-width:768px)
+{
+
+	.leftside, .rightside{
 
 		height:100vh;
 	}
